# JamGuard

./: .gitignore  JAMGUARD_ALL_DOCS_AND_CODEX_PROMPT.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: engineering-task.md  report-task.md
configs/: default_experiment.yaml  sample_experiment.toml
data/: README.md
docs/: 00_project_context.md  01_capture_pathway.md  02_gnss_sdr_validation.md  03_signal_analysis_pathway.md  04_jammer_injection_and_nulling.md  05_results_packaging.md  06_rf_testbench_and_field_testing.md  07_fpga_handoff.md  08_common_functions.md  09_test_110_robust_sweep_workflow.md  architecture.md  development_plan.md  ece416_schedule_alignment.md  example_command_usage.md  overview.md  project_overview.md  proposal_requirements_summary.md  repository_guide.md  roadmap.md  standards_constraints_and_risks.md
docs/course_docs/: JamGuard_Project_Description_Schedule_Proposed_Revision_v4_FPGA_emphasis.docx  README.md
docs/session_handoffs/: test_110_git_status_before_codex.txt  test_110_robust_sweep_handoff.md
docs/templates/: ECE_414_Proposal_Template_2024.docx  README.md
hardware/: README.md
hardware/antenna_array/: README.md  ground-plane-notes.md  (+1 more)
notebooks/: README.md
project_management/: milestones.md  risk_definitions.md  risks.md
reports/: README.md
results/: README.md
scripts/: run_calibration_summary.py  run_channel_health.py  run_first_beamforming_demo.py
tests/: README.md  test_cli_smoke.py  test_core.py  test_pipeline_smoke.py
(+149 files in other folders)
