[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jamguard"
version = "0.1.0"
description = "COTS Anti-Jamming GNSS Beamforming System foundation"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24", "scipy>=1.10", "pandas>=2.0", "matplotlib>=3.7"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
